--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@eslint/js": "^9.35.0",
     "eslint": "^9.35.0",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8"
   }
 }
